Major refectoring. Renamed mainwindow -> tablewindow. Add child controller and view for menu bar.

--- a/src/tablewindow/TagPopup.fxml
+++ b/src/tablewindow/TagPopup.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="rootPane" styleClass="popup-background" stylesheets="@../application/application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainwindow.TagWindowController">
+<AnchorPane fx:id="rootPane" styleClass="popup-background" stylesheets="@../application/application.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tablewindow.TagPopupController">
    <children>
       <VBox prefWidth="150.0">
          <children>
